# cerebral-x-meta-hackathon

./: .gitignore  .venv  prototype.ipynb  pyproject.toml  readme.md
data/docs/embedding_finetune_dataset/: train_dataset.json  val_dataset.json
scripts/: agent_workflow.py  model_download.py  streamlit.py  utils.py  vec_db.py
